// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`全部算法：渐变快照 > curve/fass 1`] = `
"########.##.#..#....##.##.......
######.##.####...#...#..........
########.##..###.#.#............
#####.#####.##.#..#.#.#.#.#.....
######.######...#.#....#....#...
#########..#####.#.#............
####.######...#####..#.#........
########.#.##.##...#.##........."
`;

exports[`全部算法：渐变快照 > curve/gosper 1`] = `
"#########.##.#.#..#.#.#....#....
##.#####.#..##.#.#.##.#.#.#.....
############.###..#...#.........
#########.#.##...#....#.........
########.#.#.#..#..#............
##########.#####..###....#......
###########....#.#.#............
#######..###.##.#...##...#......"
`;

exports[`全部算法：渐变快照 > curve/hilbert 1`] = `
"########.##.##..#...#.#.........
#####..####.#.##.##.#.....#.....
#######...####..#.#..#.#........
###########...##.#.#....##...#..
########.##.##..#...#...........
#####.#.#####.##.##..#....#.....
######.##.#.##.##.#.....#.......
############..#..#.#.#.........."
`;

exports[`全部算法：渐变快照 > curve/peano 1`] = `
"####.#.###.#.#.#..#.#.##........
########.####.#.##.......#.#....
#######.#.#..#.#...#.#..........
#####.#####.###.##.##.#.#...#...
############...#..#.............
######.#.#.####.#..#.#.#..#.....
#######.##..#.##.###.#..........
#########.##.#..#.......#......."
`;

exports[`全部算法：渐变快照 > error-diffusion/atkinson 1`] = `
"#############.##..#.............
###########..##.#..#..#.........
#######.##.##..##..#..#.........
#########.###.##.##..#..#.......
#########.#.##...#..#...........
#######.###.##.##..#..#..#......
############..##..##............
#########..####..##..#..#......."
`;

exports[`全部算法：渐变快照 > error-diffusion/burkes 1`] = `
"###########.##.#.#..#...........
########.#.##.#.#.#.#..#.#......
#####.###.##.#.#.#...#..........
########.###.##.#..#.#..#..#....
####.####.#.#.#.##..#...........
#######.##.###.#..#.#..##..#....
########.##.#.#.#..#............
####.##.###.##.#.##.#.##..#....."
`;

exports[`全部算法：渐变快照 > error-diffusion/custom 1`] = `
"##########.##.#.#.#..#..........
#######.#.##.#.#.#..#..#..#.....
#########.##.#.#.#..#...#.......
#####.#.#.##.##.#.#.#..#........
##########.#.#.#.#..#...#..#....
######.##.##.##.#.#.#..#........
#######.##.##.#.#.#..#..#.......
#####.###.##.#.#.#..#..#....#..."
`;

exports[`全部算法：渐变快照 > error-diffusion/false-fs 1`] = `
"###########.##.#.#..#...........
########.#.##..#.#.#..#.#.#.....
####.#.###.###.#..#.#...........
#########.##..##.#.#..#.#..#....
#######.##.##..#.#..#...........
###.##.##.##.###.#.#....#.#.....
##########.##..#.#.#.#......#...
#######.#.#.#.##.#..#..#.#......"
`;

exports[`全部算法：渐变快照 > error-diffusion/floyd-steinberg 1`] = `
"##########.##.#.#.#..#..........
#######.#.##.#.#.#..#..#..#.....
####.#####.##.#.#.#..#...#......
#######.#.##.##.#.#.#..#........
##########.#.#.#.#..#....#......
#####.#.#.###.#.#.#..#.#....#...
##########.#.#.#.#.#.....#......
#####.##.###.##.#.#..#.#........"
`;

exports[`全部算法：渐变快照 > error-diffusion/jjn 1`] = `
"#############.##..#.............
##########.#.#..#.#..#.#........
######.#.##.##.##..##...#.......
##########.##.##.#..#....#......
####.##.##.#..#..##..#..........
#########.######.#..#..##..#....
#####.##.##..#..#..#............
###########.##.#.##.#.##..#....."
`;

exports[`全部算法：渐变快照 > error-diffusion/ostromoukhov 1`] = `
"##########.##.#.#.#..#..........
#######.#.##.#.#.#..#..#..#.....
####.#####.##.#.#.#..#...#......
#######.#.##.##.#.#.#..#........
#####.####.##..#.#.#..#...#.....
########.###.###.#..#...#.......
###.###.##.#.#..#.#..#.....#....
#####.####.##.##.#..#..#.#......"
`;

exports[`全部算法：渐变快照 > error-diffusion/shiau-fan 1`] = `
"#########.##.#.#.#.#............
#####.####.###.#.#.#.#.#.#......
########.#.#.#.#.#...#..........
#####.######.#.#.#.#..#.#..#....
####.###.#.#.#.#.#.#.#..........
##########.###.#.#...#.#.#......
######.#.#.##.#.#.#.#...........
###########.#.#.#.#.#.#.#..#...."
`;

exports[`全部算法：渐变快照 > error-diffusion/sierra-lite 1`] = `
"#########.##.#.#.#.#............
#######.###.##.#.#..#.#.#.#.....
####.####.##.#.#.#.#............
#####.##.##.##.#.#..#.#.#..#....
#######.##.##.#.#.#..#..........
###########.#.#.#.#.#..#..#.....
####.##.#.##.##.#..#..#.........
#####.####.##.#.#.#..#...#..#..."
`;

exports[`全部算法：渐变快照 > error-diffusion/sierra2 1`] = `
"##########.##.#.#..#............
#######.##.##.##.#.#..##..#.....
#######.##.##..#..#..#..........
#####.####.##.##.##.#..#..#.....
#######.##.##..#..#..#..........
####.###.##.##.##.#..#..#..#....
#########.##.#..#..#..#.........
#######.##.##.##.##..#..#..#...."
`;

exports[`全部算法：渐变快照 > error-diffusion/sierra3 1`] = `
"#############.#.#...............
#########.#..##.##.###.#........
######.##.##.#..#......#..#.....
###############.##.##.#.........
####.##..#...#..#..#....#.......
###############.##..#..#..#.....
#####.##.#.#..#..#..#..#........
#######.###.##.##.##..#........."
`;

exports[`全部算法：渐变快照 > error-diffusion/stevenson-arce 1`] = `
"##############..##..............
##########..##..##..##..........
##########..###...#..#..........
########..##.##.##..##..##......
######.#####...##..#............
######.###..###..##..#...##.....
###########.###..##..#..........
#####.##..###..##..#..##........"
`;

exports[`全部算法：渐变快照 > error-diffusion/stucki 1`] = `
"############.##.#..#............
#########.#.##..#.#.#..#........
######.###.#.##.#..#..#..#......
########.##.##.#.#.#..#.........
####.##.###.#.#.#.#..#..#.......
##########.###.#.#..#..#...#....
#####.##.##..##.#.#..#..........
########.##.##.#.#.#.#..#.#....."
`;

exports[`全部算法：渐变快照 > error-diffusion/zhou-fang 1`] = `
"##########.##.#.#.#..#..........
#######.#.##.#.#.#..#..#..#.....
####.#####.##.#.#.#..#...#......
#######.#.##.##.#.#.#..#........
#####.####.##..#.#.#..#...#.....
#########.##.###.#..#...#.......
###.##.#.##.#..#..#..#.....#....
#########.##.##.#.#.#..#.#......"
`;

exports[`全部算法：渐变快照 > halftone/cosine 1`] = `
"#########.....#####........##...
##########....#####.............
##################..............
###############.................
#####..#######......####........
####...#######......####........
#####..#######......####........
##############.......##........."
`;

exports[`全部算法：渐变快照 > halftone/cross 1`] = `
"##########...#######.......##...
###########.########......##.#..
#####################....##.....
################..####.###......
###############....######.......
#####..########.....####........
###############.....#####.......
################..####.###......"
`;

exports[`全部算法：渐变快照 > halftone/diamond 1`] = `
"##########....#####.........#...
##########....#####.............
##################..............
##############..................
##############.......###........
#####..#######.......###........
#####..#######.......###........
##############.................."
`;

exports[`全部算法：渐变快照 > halftone/ellipse 1`] = `
"##########...########.....####..
############.########......##...
#############.########..........
##############..########........
###############....######.......
#####.#########....######.......
######.#########....#####.......
#################...#####......."
`;

exports[`全部算法：渐变快照 > halftone/euclidean 1`] = `
"########......######......####..
#########.....######.......##...
##########....#####.............
#####..#######......####........
####....######......#####.......
####....######......#####.......
####....######......#####.......
#####...######......#####......."
`;

exports[`全部算法：渐变快照 > halftone/hexagon 1`] = `
"##########...#####..............
###########..#####..............
###.#######...###...............
###########.....................
###########.....................
####.#####..........##..........
####..###...###.....###.........
#######....#####....###........."
`;

exports[`全部算法：渐变快照 > halftone/line 1`] = `
".#########....######........#...
#.#########.....####.........#..
##.#########.....####...........
###.#########.....####..........
####.########......####.........
#####..#######......####........
######..#######.......###.......
######...#######.......###......"
`;

exports[`全部算法：渐变快照 > halftone/round 1`] = `
"..#######.....#####........##...
..#######.....#####.............
##.#####..##....##..............
###.##...####...................
####....######.......###........
####....######......#####.......
####....######......####........
###.....######.......##........."
`;

exports[`全部算法：渐变快照 > halftone/square 1`] = `
".########.....#####.............
#.######........##..............
##.#####...#....................
###.###..####...................
####.#..#####.........#.........
#####..#######.......###........
####....######........#.........
###..#...####..................."
`;

exports[`全部算法：渐变快照 > halftone/star 1`] = `
"#########......###..............
#########......#..#.............
#########.....#.................
##############..................
####....#####...................
####....#####.........#.........
####....#####...................
######..######.................."
`;

exports[`全部算法：渐变快照 > noise/blue 1`] = `
"####.##.######.##.#.#...........
##########.#.##.#.#....#........
######.##.#..#.#...#..#..#.#....
########.#####..####.#.#.....#..
#####.####.##.#.#...#....#......
#######.#.#...#.#..#..#.#..#....
#######.#######.###.#...........
###.#####..#.#..#....#.#....#..."
`;

exports[`全部算法：渐变快照 > noise/ign 1`] = `
"########.#.##.#.#.#..#.#........
####.######.#.##.#.#....#.......
#######.####.#.#..#.#.#....#....
###.####.#.#.##.#.#....#......#.
######.####.#.#..#.#.#....#.....
#######.#.####.#.#..#.#.........
##########.#.##.#.#....#.#......
######.#.##.#.#.#..#.#....#....."
`;

exports[`全部算法：渐变快照 > noise/perlin 1`] = `
"#########...........#####.......
#########............###........
#########..##...................
###############.................
################................
################................
################................
########...#####................"
`;

exports[`全部算法：渐变快照 > noise/white 1`] = `
"######...###.##...####....#.....
###.##.#.##.#........#.....#....
###..##..##.######......##......
#######.##.#.####.###....#......
####.###..###...##.#..#.........
##.#####.###.....#..............
#######.#####.#.##.##.#....#....
##.######.#...#.###.##...#......"
`;

exports[`全部算法：渐变快照 > ordered/bayer2 1`] = `
"#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............"
`;

exports[`全部算法：渐变快照 > ordered/bayer3 1`] = `
"#######.##.##.##.##..#..#..#....
#########.##..#..#..#...........
##.##.##.##.##.##..#..#..#......
#######.##.##.##.##..#..#..#....
#########.##..#..#..#...........
##.##.##.##.##.##..#..#..#......
#######.##.##.##.##..#..#..#....
#########.##..#..#..#..........."
`;

exports[`全部算法：渐变快照 > ordered/bayer4 1`] = `
"###########.###.#.#.#.#.#.#.#...
######.#.#.#.#.#.#...#..........
#########.###.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#...#............
###########.###.#.#.#.#.#.#.#...
######.#.#.#.#.#.#...#..........
#########.###.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#...#............"
`;

exports[`全部算法：渐变快照 > ordered/bayer8 1`] = `
"###############.#.#.#.#.#.#.#...
######.#.#.#.#.#.#.#.#..........
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............
###########.###.#.#.#.#.#...#...
######.#.#.#.#.#.#...#..........
#########.###.#.#.#.#.#...#.....
####.#.#.#.#.#.#...#............"
`;

exports[`全部算法：渐变快照 > ordered/bayer16 1`] = `
"###############.#.#.#.#.#.#.#...
######.#.#.#.#.#.#.#.#..........
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............
###########.###.#.#.#.#.#...#...
######.#.#.#.#.#.#...#..........
#########.###.#.#.#.#.#...#.....
####.#.#.#.#.#.#...#............"
`;

exports[`全部算法：渐变快照 > ordered/bayer32 1`] = `
"###############.#.#.#.#.#.#.#...
######.#.#.#.#.#.#.#.#..........
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#.#............
###########.###.#.#.#.#.#...#...
######.#.#.#.#.#.#...#..........
#########.###.#.#.#.#.#...#.....
####.#.#.#.#.#.#...#............"
`;

exports[`全部算法：渐变快照 > ordered/centerwhite 1`] = `
"#########..#####.....##.........
#..#####....####....####........
#########...####....####......#.
##########.#####......#.........
#############...###.............
#####..#####....####.....##.....
#####..#####....####.....##.....
#############....##.......#....."
`;

exports[`全部算法：渐变快照 > ordered/circle5 1`] = `
"####..###..##....#..............
##############..###..##....#....
###################..###...#....
##########.###..###...#.........
####..###...#...................
####..###..##....#..............
##############..###..##....#....
###################..###...#...."
`;

exports[`全部算法：渐变快照 > ordered/circle6 1`] = `
"#####..###....##................
###########..####..###....#.....
#################..####..###....
############.####..####...##....
######.####..####...##..........
#####...##......................
#####..###....##................
###########..####..###....#....."
`;

exports[`全部算法：渐变快照 > ordered/circle7 1`] = `
"######...###....................
######.######..####.....#.......
#############..#####..####......
##############.#####..####......
#############..#####...###......
######..#####..####.............
#####.....#.....................
######...###...................."
`;

exports[`全部算法：渐变快照 > ordered/cluster4 1`] = `
"#######..##..##..##.............
###################.###..##..#..
############.##..##..##...#.....
###..##..##.....................
#######..##..##..##.............
###################.###..##..#..
############.##..##..##...#.....
###..##..##....................."
`;

exports[`全部算法：渐变快照 > ordered/cluster8 1`] = `
"#############...###......#......
#####...####....####....###.....
#####...####....####.....##.....
######.######...###.............
#########..#####.....##.........
##.######...####....####.....#..
##.######...####.....##.........
##########.#####................"
`;

exports[`全部算法：渐变快照 > ordered/diagonal 1`] = `
"#######.#####...####....##......
######.#####...####....##.......
#####.#####...####....##........
####.#####...####....##.........
###.######..####....###.....#...
#########..####....###.....#....
#.######..####....###.....#.....
#######..####....###.....#......"
`;

exports[`全部算法：渐变快照 > ordered/nonrect 1`] = `
"###########.###.#.#.#.#.#.#.#...
##.###.#.#.#.#.#.#.#............
#############.#.#.#.#.#.#.#.....
####.#.#.#.#.#.#.#...#..........
###########.#.#.#.#.#.#.#...#...
######.#.#.#.#.#...#............
#########.###.#.#.#.#.#.#.#.....
####.###.#.#.#.#.#.............."
`;

exports[`全部算法：渐变快照 > pattern/brick 1`] = `
"#####################..##.......
###.......####.........##.......
###.......####.........##.......
###.......####.........##.......
###.......####.........##.......
#####################..##.......
#####################...........
...#####.........##............."
`;

exports[`全部算法：渐变快照 > pattern/checker 1`] = `
"##################......####....
##################......####....
##################......####....
##################......####....
##################......####....
##################......####....
####..######......##............
####..######......##............"
`;

exports[`全部算法：渐变快照 > pattern/cross 1`] = `
"######.####..###....##..........
################....##..........
##########################......
##########################......
################....##..........
######.####..###....##..........
######.####..###....##..........
################....##.........."
`;

exports[`全部算法：渐变快照 > pattern/diagonal 1`] = `
"#####.#####..###...##.....#.....
####.#####..###...###....#......
###.#####.####...###....#.....#.
##.#####.####...###....#.....#..
#.#####.####...###....#.....#...
.#####.####...###...##.....#....
#####.#####..###...##.....#.....
####.#####..###...###....#......"
`;

exports[`全部算法：渐变快照 > pattern/hexagon 1`] = `
"#####..###......................
###########..###....#...........
###########..####...##....#.....
###########..###....##..........
#####..###......................
#######.........................
########..####...##.............
#########.####..###....##......."
`;

exports[`全部算法：渐变快照 > pattern/hlines 1`] = `
"######..........................
################................
##########################......
##########################......
################................
######..........................
######..........................
################................"
`;

exports[`全部算法：渐变快照 > pattern/sine 1`] = `
"######.####.#####...##...##.....
#######.##..######..............
#######....###...#......#.......
####.###..###....##....#........
############..#...##..##........
#####.######.####..####.........
######.####.#####...##...##.....
#######.##..######.............."
`;

exports[`全部算法：渐变快照 > pattern/spiral 1`] = `
"#######.#####..........##.......
######..####...###......#.......
######..####..#####.....#.......
######..####..##.###....##......
######..####...#..##....##......
#######.#####.....##....##......
#######.######...###....##......
#######..##########.....#......."
`;

exports[`全部算法：渐变快照 > pattern/vlines 1`] = `
"######.####..###....##..........
######.####..###....##..........
######.####..###....##..........
######.####..###....##..........
######.####..###....##..........
######.####..###....##..........
######.####..###....##..........
######.####..###....##.........."
`;

exports[`全部算法：渐变快照 > search/dbs 1`] = `
"####.####..##.#.#.#..#....#.....
############.#.#.#..#..#........
######..##.##.#.#..#.#...#..#...
#########.##.##.##..#..#........
###.#.####.#.#.#..#.#....#......
#######.#.###.#.#.#..#.#........
##########.#.#.#.#.#.....#..#...
#####.##.###.##.#..#.#.#........"
`;

exports[`全部算法：渐变快照 > search/knuth 1`] = `
"#######.###.#.#.#..#..#..#......
###.######.####..##.#......#....
#.######.##..#.#.#.#...#.#......
########.#.####.#.#.#....#......
######.####.#..#..#..#.#........
########.#.#.##.##.#...#........
####.#.######.##...#.##.....##..
########.#.#.#.#.#.#...#........"
`;

exports[`全部算法：渐变快照 > search/lippens 1`] = `
"#########.###.#..#...#..........
####.#.#.##.#.#######...#.#.....
#########.#####......#.#........
####.#.#.###...#####......#.....
#########.#.###......#.#........
####.#.#.####.####.#......#.....
#########.#.#.#....#.#.#........
######.#.###.#.#.#.............."
`;

exports[`全部算法：渐变快照 > threshold/adaptive 1`] = `
"########........................
########........................
########........................
########........................
########........................
########........................
########........................
########........................"
`;

exports[`全部算法：渐变快照 > threshold/fixed 1`] = `
"################................
################................
################................
################................
################................
################................
################................
################................"
`;

exports[`全部算法：渐变快照 > threshold/otsu 1`] = `
"################................
################................
################................
################................
################................
################................
################................
################................"
`;
